2008-06-20  Neal H. Walfield  <neal@gnu.org>

	* ager.c: Include "pager.h".
	(ager_loop): Consider total available memory as not MEMORY_TOTAL
	but MEMORY_TOTAL - PAGER_LOW_WATER_MARK.  Improve debugging
	output.

2008-06-18  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Implement the cap_rubout method.
	* rm.h (rm_method_id_string): Handle RM_cap_rubout.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): In the object_discarded_clear
	implementation, don't use cap_to_object, which ignores discarded
	object, to find the object but look it up manually.

2008-06-11  Neal H. Walfield  <neal@gnu.org>

	* output.c (puts) [_ENABLE_TESTS]: Don't define.
	(vprintf) [_ENABLE_TESTS]: Likewise.
	(printf) [_ENABLE_TESTS]: Likewise.

2008-06-11  Neal H. Walfield  <neal@gnu.org>

	* output.h: Include <s-printf.h>.
	(device_puts): Remove declaration.
	(device_vprintf): Likewise.
	(device_printf): Likewise.
	* output.c (device_puts): Remove function.
	(print_nr): Likewise.
	(print_signed_nr): Likewise.
	(device_vprintf): Likewise.
	(device_printf): Likewise.
	(puts): Implement in terms of s_puts.
	(vprintf): Implement in terms of s_vprintf.
	(printf): Likewise.

2008-06-05  Neal H. Walfield  <neal@gnu.org>

	* cap-lookup.c: Move from here...
	* ../libhurd-mm/as-lookup.c: ... to here.
	* as.c: Move from here...
	* ../libhurd-mm/as-build.c: ... to here.
	* as-custom.c: Move from here...
	* ../libhurd-mm/as-build-custom.c: ... to here.
	* as.h: Move contents...
	* ../libhurd-mm/as.h: ... to here...
	* ../libhurd-mm/as-compute-gbits.h: ... and to here.
	* bits.h: Move from here...
	* ../libhurd-mm/bits.h: ... to here.
	* Makefile.am (viengoos_SOURCES): Remove cap-lookup.c, as.h and
	as.c.
	(t_as_SOURCES): Likewise.
	(t_activity_SOURCES): Likewise.
	(viengoos_LDADD): Add ../libhurd-mm/libas-kernel.a.
	(t_as_LDADD): Add ../libhurd-mm/libas-check.a.
	(t_activity_LDADD): Likewise.
	(lib_LIBRARIES): Remove libhurd-cap.a.